@@ -1,3 +1,10 @@
+2009-04-22  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/protocol.c
+	* src/util.h
+	* src/util.c (get_language_code):
+	Moved from protocol.c to util.c
+
 2009-04-20  Alberto Garcia  <agarcia@igalia.com>
 
 	* src/lastfm-ws.c (lastfm_ws_get_track_tags)
